<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="200dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/card_back"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_car_id"
                android:textStyle="bold"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:textSize="26dp"
                android:text="@string/car_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_weichuli_weizhang"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:textSize="20dp"
                android:text="@string/weichuliweizhang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/tv_fakuan"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:textSize="20dp"
                android:text="@string/fakuan_2_250"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_remove_item"
        android:layout_margin="5dp"
        android:background="@mipmap/remove_item_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>